# SimpleVideoEditor

./: .gitignore  CMakeLists.txt  PKGBUILD  QtStaticCMake.cmake  README.md  TODO.md  editor.cpp  editor.h  main.cpp  parser.cpp  parser.h  renderer.cpp  renderer.h  test.yml
data/: audio_file.cpp  audio_file.h  file.cpp  file.h  files.h  image_file.cpp  image_file.h  text.cpp  text.h  video_file.cpp  video_file.h
utils/: fold_text.cpp  fold_text.h  lists.h  sections.cpp  sections.h
widgets/: highlighter.cpp  highlighter.h  preview_widget.cpp  preview_widget.h  settings.cpp  settings.h  text_edit.cpp  text_edit.h  video.cpp  video.h  video_render_widget.cpp  video_render_widget.h  video_renderer.cpp  video_renderer.h
